--- a/src/style/_var.scss
+++ b/src/style/_var.scss
@@ -1,6 +1,11 @@
-$black: #000;
+$bgcolor: #153956;
+$twocolor: #4A7FAB;
+$darkcolor: #072238;
+$linkColor:#F07B61;
+$textColor: #F2A278;
 $white: #fff;
-$whiteDark: rgb(186, 186, 186);
+$black: #000;
+$pr: rgba($color: #000000, $alpha: 0);
 
 
 
