--- a/src/style/_skills.scss
+++ b/src/style/_skills.scss
@@ -1,6 +1,6 @@
 .skills {
     max-width: 100%;
-    padding: 100px 50px;
+    padding: 50px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
