--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -2,3 +2,13 @@ body {
   font-family: 'Roboto', sans-serif;
   background-color: $bgcolor;
 }
+.title-wrap{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 25px 0 0 0;
+}
+.title{
+  color: $white;
+  font-size: 36px;
+}
